# bumpy-reverse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 01-inventory.md  02-unpacking-tinyprog.md  03-copy-protection.md  04-data-files.md  05-resource-pipeline.md  06-engine.md  README.md  an-account.md  building.md  copy-protection.md  data-files.md  dosbox-int8-capture.md  engine.md  faithfulness-gap-audit.md  fidelity-cleanup-handoff.md  ghidra-symbol-map.md  playable-dos.md  reconstruction-fidelity.md  rendering-pipeline.md  session-handoff-2026-07-02.md  tinyprog.md  tools.md
imhex/: README.md  bin.hexpat  car.hexpat  container.hexpat
src/: Makefile  anim.c  anim.h  anim_data.c  bg_render.c  bg_render.h  bgi_overlay.c  bgi_overlay.h  bsprite.c  bsprite_buf.c  build.sh  bumpy.h  bvec.c  bvec_buf1.c  bvec_buf2.c  config_screens.c  config_screens.h  dosio.c  dosio.h  entity.c  entity.h  game.c  game.h  game_stubs.c  gfx_overlay.c  gfx_overlay.h  gfx_palette.c  gfx_palette.h  globals.c  input.c  input.h  items.c  items.h  level.c  level.h  main.c  midi.c  midi.h  move_scripts.c  op12.c  (+26 more)
tools/: anim_chan_ctest.c  anim_ctest.c  anim_oracle.py  arena_diff.py  bg_blit_ref.py  bg_ctest.c  bg_oracle_diff.py  blit_ctest.c  blit_oracle_diff.py  blit_ref.py  chain_ctest.c  compare_unpacked.py  composite_check.py  composite_ctest.c  copyprot_ctest.c  copyprot_oracle.py  decomp_export.sh  disasm16.py  disasm_at.py  disasm_stub.py  fb_compare.c  find_string_refs.py  footprint_check.py  frame3_test.py  frame4_test.py  frame_render.py  game_ctest.c  game_oracle.py  (+56 more)
(+118 files in other folders)
